# antivirus

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
apps/: CMakeLists.txt
apps/avscan/: main.cpp
client/: CMakeLists.txt
client/src/: desktop_notifier.cpp  desktop_notifier.hpp  ipc_client.cpp  ipc_client.hpp  main.cpp  tray_icon.cpp  tray_icon.hpp
client/ui/: app.slint
cmake/: Dependencies.cmake  EmbedFile.cmake
daemon/: CMakeLists.txt  avdaemon.service
daemon/bpf/: syscall_event.h  syscall_monitor.bpf.c
daemon/src/: daemon.cpp  daemon.hpp  ebpf_event.cpp  ebpf_event.hpp  ebpf_monitor.cpp  ebpf_monitor.hpp  fanotify_monitor.cpp  fanotify_monitor.hpp  inotify_watcher.cpp  inotify_watcher.hpp  ipc_server.cpp  ipc_server.hpp  main.cpp  recursive_watcher.cpp  recursive_watcher.hpp
data/: rules.yar  signatures.db
libs/avcore/: CMakeLists.txt
libs/avcore/include/avcore/: error.hpp
libs/avcore/include/avcore/analysis/: elf_analyzer.hpp
libs/avcore/include/avcore/exclusions/: exclusion_store.hpp
libs/avcore/include/avcore/hashing/: md5.hpp  sha1.hpp  sha256.hpp
libs/avcore/include/avcore/matching/: aho_corasick.hpp
libs/avcore/include/avcore/quarantine/: quarantine.hpp
libs/avcore/include/avcore/scan/: file_scanner.hpp  signature_database.hpp  verdict.hpp  yara_scanner.hpp
libs/avcore/include/avcore/util/: file.hpp  hex.hpp  path.hpp  unique_fd.hpp
libs/avcore/src/analysis/: elf_analyzer.cpp
libs/avcore/src/exclusions/: exclusion_store.cpp
libs/avcore/src/hashing/: md5.cpp  sha1.cpp  sha256.cpp
libs/avcore/src/matching/: aho_corasick.cpp
libs/avcore/src/quarantine/: quarantine.cpp
libs/avcore/src/scan/: file_scanner.cpp  signature_database.cpp  verdict.cpp  yara_scanner.cpp
libs/avcore/src/util/: file.cpp  hex.cpp  path.cpp  unique_fd.cpp
libs/avipc/: CMakeLists.txt
libs/avipc/include/avipc/: codec.hpp  message.hpp
libs/avipc/src/: codec.cpp
tests/: CMakeLists.txt  aho_corasick_tests.cpp  ebpf_event_tests.cpp  elf_tests.cpp  exclusion_tests.cpp  hashing_tests.cpp  hex_tests.cpp  inotify_watcher_tests.cpp  ipc_tests.cpp  path_tests.cpp  quarantine_tests.cpp  scan_tests.cpp  test_support.hpp  unique_fd_tests.cpp  yara_tests.cpp
